# agentharness

./: .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: codex-task-core.md  codex-task-docs-site.md  codex-task-hardening.md  index.md  llms.txt
docs/concepts/: determinism-kit.md  effects-and-runner.md  state-and-events.md  thesis.md
docs/cookbook/: bring-your-own-model.md  catch-regression.md  define-tool.md  index.md  inspect-event-log.md  multi-step-tool-use.md  persist-diff-traces.md  record-replay-offline.md  run-async.md  swap-providers.md  unit-test-agent.md
docs/getting-started/: first-run.md  install.md  record-replay.md
docs/guides/: testing-agents.md  tools.md
docs/providers/: anthropic.md
docs/reference/: agentharness.md  contrib.md  core.md
docs/superpowers/specs/: 2026-06-24-agentharness-core-design.md  2026-06-25-docs-site-design.md
examples/: agent_quickstart.py  quickstart.py
scripts/: build_llms_full.py
